# Detector

./: .gitignore  README.md  cam_test.py  requirements.txt  setup.cfg  socket_1.py
Training/: 1. Image Collection.ipynb  model_optimization.py  train_yolov8_object_detection.ipynb
Training/ChargedUp23-1/: README.dataset.txt  README.roboflow.txt  data.yaml
Training/ChargedUp23-1/test/: labels.cache
Training/ChargedUp23-1/test/labels/: cone-0281681c-9080-11ed-8845-709cd1141cab_jpg.rf.aba1f8edd51aa6a4bbc7ec0a25a215a8.txt  (+52 more)
Training/ChargedUp23-1/train/: labels.cache
Training/ChargedUp23-1/valid/: labels.cache
detection/: balldetection_config.json  detect.py  detect_config.json  detector.py  yolo_inference.py
detector/: apriltag_detector.py  ball_detection.py  detect.py  test.py
frc-detection/: ball_detection.py  detector.py
frc_detection/: __init__.py  detect_config.json  detector.py  test.py  test2.py  test3.py
runs/detect/train/: args.yaml  events.out.tfevents.1673826626.95a8fd53f816.9701.0  predictions.json  results.csv
runs/detect/train2/: args.yaml  events.out.tfevents.1674019094.a0b21afa1212.1415.0  predictions.json  results.csv
runs/detect/train4/: args.yaml  events.out.tfevents.1675054462.02a417c9693d.3762.0  results.csv
runs/detect/train5/: args.yaml  events.out.tfevents.1675304177.417116af2315.3023.0  results.csv
runs/detect/train6/: args.yaml  events.out.tfevents.1675963810.a6c26c17f5c0.3020.0  model_artifacts.json  results.csv
runs/detect/train7/: args.yaml  results.csv
runs/detect/train8/: args.yaml  model_artifacts.json  results.csv
(+446 files in other folders)
