[metadata]
name = frc_detection
version = 0.0.1
author_email = debriann07@gmail.com
long_discription  = file: README.me
url = https://github.com/FRC-Team-1160/Detector/tree/master 
classifiers =
    Programming Language :: Python :: 3
    Environment :: MacOS X

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir = 
    = .
install_requires = file:requirements.txt